cambio de texto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="login">Alredy have an account? <a href="#">Sign In</a></p>
             <h1>Have a question about this product?</h1>
             <p>
-                Have a question about this product? Sing up for a free account to open
+                Have a question about the product? Sing up for a free account to open
                 an issue and contact its maintainers
             </p>
             <form class="form">
